--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coderhouse",
+  "name": "coder",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,20 +7,27 @@
   "scripts": {
     "start": "nodemon src/app.js"
   },
-  "author": "",
+  "author": "Tomas",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "bcrypt": "^5.1.0",
-    "connect-mongo": "^5.0.0",
+    "commander": "^10.0.0",
+    "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-handlebars": "^7.0.7",
+    "express-handlebars": "^6.0.7",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.5",
+    "mongoose": "^6.9.2",
     "mongoose-paginate-v2": "^1.7.1",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
-    "socket.io": "^4.6.1"
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
+    "socket.io": "^4.5.4"
   }
 }
