--- a/.env
+++ b/.env
@@ -1,3 +1,18 @@
-PORT = 8090
-MONGOURL = "mongodb+srv://tomasizuel:coderpassword@cluster0.jrcnpzo.mongodb.net/ecommerce?retryWrites=true&w=majority"
-SECRET = 'sessionKey'
+PORT : 8090
+MONGOURL : "mongodb+srv://tomasizuel:coderpassword@cluster0.jrcnpzo.mongodb.net/ecommerce?retryWrites=true&w=majority"
+SECRET : 'sessionKey'
+ADMIN_EMAIL: 'adminCoder@mail.com'
+ 
+ ADMIN_PASSWORD: 1234
+
+ GMAIL_PASSWORD: frnqzlnocdbpoiog
+
+ GMAIL_USER: tomasizuel@gmail.com
+
+ TWILIO_PHONE_NUMBER: +16206708811
+
+ TWILIO_SID: AC2ae1c3a99bb275f25a112f13c8d8cd24
+
+ TWILIO_AUTH_TOKEN: 3f1e5a9229db89d053cec07d7ea1bfee
+
+ NODE_ENV: development
