--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "mongoose": "^6.9.2",
     "mongoose-paginate-v2": "^1.7.1",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.22",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
-    "socket.io": "^4.5.4"
+    "socket.io": "^4.5.4",
+    "winston": "^3.8.2"
   }
 }
